--- a/resources/web/templates/index.jinja2
+++ b/resources/web/templates/index.jinja2
@@ -95,14 +95,14 @@
         <div class="container">
           <header class="section-header">
             <span>Новое</span>
-            <h2>Последнии предложения</h2>
-            <p>Вот последнии предложений</p>
+            <h2>Последние предложения</h2>
+            <p>Вот последние предложения</p>
           </header>
 
           <div id='all_items_block' class="row item-blocks-condensed">
           </div>
           <br><br>
-          <p class="text-center"><a class="btn btn-info" href="item-list.html">Показать все предложения</a></p>
+          {# <p class="text-center"><a class="btn btn-info" href="item-list.html">Показать все предложения</a></p> #}
         </div>
       </section>
       <section id='how_it_work'>
